# HistoryRevisionismLLM

./: .gitattributes  .gitmodules  README.md  infini_gram_document_search.ipynb  module_aliases.py  pyproject.toml  requirements_scraper.txt
.github/instructions/: default.instructions.md
data/EUvsDISINFO/input/: euvsdisinfo_historical_revisionism_cases_checkpoint.txt  euvsdisinfo_historical_revisionism_cases_cleaned.json
data/human_eval/: sample30_with_human_score.csv
data/manual_historical/evaluated/: all_models_with_score_1082025_explicit_push_v1.6.csv  all_models_with_score_1082025_implicit_push_v1.6.csv  all_models_with_score_1082025_v2.csv  all_models_with_score_1082025_v3.txt  all_models_with_score_31072025_v1.2.csv  all_models_with_score_31072025_v1.csv  all_models_with_score_v4.csv  api_models_with_score_18072025_explicit_push_gemma3_v1.6.csv  api_models_with_score_18072025_implicit_push_gemma3_v1.6.csv
data/manual_historical/input/: data_18072025.csv
data/manual_historical/processed/: refactored_data.csv
notebooks/: 10_paper_table.ipynb  1_exploration.ipynb  4_humaneval.ipynb  8_humaneval.ipynb
prompts/: judge_finalized0729.py  judge_instructions.py  scenarios.py  user_cases.py
slurm/: scraping_euvsdisinfo
src/: __init__.py  infini_gram.py  utils.py
src/DataCollection/: euvsdisinfo_scraper.py  json_cleaner.py
src/DataProcessing/: euvsdisinfo.py  generate_prompts.py
src/Evaluation/: evaluate_models.py  evaluate_responses.py  get_responses.py  judge_finalized_0729_gemma3.py  llm_as_a_judge.py
(+10 files in other folders)
